        ============== rnumber release 1.13.7 (v1_13_7) on SunOS ==============

2003-01-21  Todd Dukes  <Todd.Dukes@motorola.com>

	* added documentation for bigloo bindings.

2003-01-06  Todd Dukes  <Todd.Dukes@motorola.com>

	* removed dist-hook to remove rvparser.yy from ./Makefile.am this
          file was never part of rnumber.
	* changes so that 'make dist' makes a buildable distribution.

        ============== rnumber release 1.13.5 (v1_13_5) on SunOS ==============

        ============== rnumber release 1.13.4 (v1_13_4) on SunOS ==============

2003-01-06  Todd Dukes  <Todd.Dukes@motorola.com>

	*  made documentation installation optional. Small modifications to
	   documentation.

        ============== rnumber release 1.12.1 (v1_12_1) on SunOS ==============

        ============== rnumber release 1.12.1 (v1_12_1) on SunOS ==============

2002-12-13  Todd Dukes  <Todd.Dukes@motorola.com>

	*  CDCpp33115 - fixed core dump on left and right shifts of integers
	   where the shift is an rnumber bigger than word size.

	* add perl operator overloading. There is some problem with shifting
	  integers by rnumbers that needs to be worked out.

2002-12-12  Todd Dukes  <Todd.Dukes@motorola.com>

	* perl added memory reclamation.
	

        ============== rnumber release 1.11.3 (v1_11_3) on SunOS ==============

        ============== rnumber release 1.11.3 (v1_11_3) on Linux ==============

        ============== rnumber release 1.11.3 (v1_11_3) on SunOS ==============

2002-12-09  Brian Kahne  <bkahne@ibmoto.com>

	* Got conditional install (cinstall) working.

        ============== rnumber release 1.11.2 (v1_11_2) on SunOS ==============

2002-12-05  Todd Dukes  <Todd.Dukes@motorola.com>

	*  perl: changed numericp to include both SvIOK and SvNOK.

        ============== rnumber release 1.11.1 (v1_11_1) on SunOS ==============

2002-12-05  Todd Dukes  <Todd.Dukes@motorola.com>

	*  perl: There is a problem with large integers (msb being set) not 