@@ -13,7 +13,7 @@ dnl AC_DIVERT_PUSH(AC_DIVERSION_NOTICE)dnl
 # set RNUMBER_BINARY_AGE and RNUMBER_INTERFACE_AGE to 0.
 #
 RNUMBER_MAJOR_VERSION=1
-RNUMBER_MINOR_VERSION=13
+RNUMBER_MINOR_VERSION=15
 RNUMBER_MICRO_VERSION=7
 RNUMBER_INTERFACE_AGE=0
 RNUMBER_BINARY_AGE=0
@@ -38,39 +38,11 @@ AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
 
 AM_CONFIG_HEADER(config.h)
 
+OS=`/usr/bin/env uname`
+
 #########################################################################
 #  Configure arguments 
 #########################################################################
-AC_ARG_ENABLE(voodoo,
-[  --enable-voodoo    Use Voodoo Fried Chicken spell to compile ( this only when everything else fails)],
-ac_voodoo=yes
-AC_MSG_RESULT("Enabling Voodoo Fried Chicken spell")
-)
-                
-AC_ARG_ENABLE(extra-crispy,
-[  --enable-extra-crispy    Roast the chicken extra-crispy (see voodoo option)],
-if test "$ac_voodoo" = "yes"; then
-  AC_MSG_RESULT("Extra-crispy on")
-else
-  AC_MSG_ERROR("Extra-crispy option can be used only with Voodoo")
-fi
-)
-                 
-AC_ARG_ENABLE(vegetarian,
-[  --enable-vegetarian    The chicken will be a Tofu chicken (see voodoo option)],
-if test "$ac_voodoo" = "yes"; then
-  AC_MSG_RESULT("Using Tofu Chicken")
-else
-  AC_MSG_ERROR("Vegetarian option can be used only with Voodoo")
-fi
-)
-
-# AC_ARG_ENABLE(implicit-templates,
-# [  --enable-implicit-templates    Uses implicit template instantiation, which is more portable, but produces code bloat],
-# AC_MSG_RESULT("Using implicitly instantiated templates."),
-# AC_MSG_RESULT("Using explicitly instantiated templates.")
-# TEMPLATE_CONTROL="-fno-implicit-templates -D_USE_EXPLICIT_TEMPLATES"
-#)
 
 AC_ARG_ENABLE(opt,
 [  --enable-opt    Enable optimization flag (-O3), disables debug],
@@ -85,11 +57,17 @@ AC_ARG_ENABLE(dbg,
  AC_MSG_RESULT("Debugging with -g"),
 )
 
+DYNLINK="-fPIC"
+PROFILE=
+
 AC_ARG_ENABLE(profile,
 [  --enable-profile    Enable profiling],
  PROFILE="-pg"
- AC_MSG_RESULT("Profiling with -pg"),
- PROFILE="-fPIC"
+ AC_MSG_RESULT("Profiling with -pg")
+ if test x$OS = xSunOS ; then
+   echo "Turning off position-independent code b/c we're on Solaris".
+   DYNLINK=
+ fi,
 )
 
 default_efence="/nfs/ibmoto/tools/tlv4/raptor/lib/obj.SunOS/libefence.a"
@@ -538,10 +516,9 @@ dnl GCC_STD_EXCEPTIONS
 
 AC_SUBST(EXCEPTION_FILE)
 
-CXXFLAGS="-Wall $CXXFLAGS $PROFILE $TEMPLATE_CONTROL"
+CXXFLAGS="-Wall $CXXFLAGS $DYNLINK $PROFILE $TEMPLATE_CONTROL"
 
 AC_SUBST(CXXFLAGS)
-AC_SUBST(PROFILE)
 AC_SUBST(EXPLTEMPLATES)
 AC_PROG_INSTALL
 AC_STDC_HEADERS
