@@ -1,3 +1,8 @@
+2003-01-23  Brian Kahne  <bkahne@ibmoto.com>
+
+	* Re-did how profiling is setup so that on Linux, we build with
+	position-independent code.
+
         ============== rnumber release 1.13.7 (v1_13_7) on SunOS ==============
 
 2003-01-21  Todd Dukes  <Todd.Dukes@motorola.com>
@@ -5,7 +10,7 @@
 	* added documentation for bigloo bindings.
 
 2003-01-06  Todd Dukes  <Todd.Dukes@motorola.com>
-
+	
 	* removed dist-hook to remove rvparser.yy from ./Makefile.am this
           file was never part of rnumber.
 	* changes so that 'make dist' makes a buildable distribution.
